# sheep

./: .env.example  README.md  pyproject.toml  requirements.txt
rag/: __init__.py  exceptions.py  interests.py  logger.py  models.py  rag.py  summarizer.py  vector_store.py
rag/tests/: test_rag_package.py
relevantai/: manage.py
relevantai/chatbot/: admin.py  models.py  urls.py  views.py
relevantai/chatbot/management/commands/: index_articles.py  rag_stats.py  scrape_articles.py
relevantai/chatbot/migrations/: 0001_initial.py  0002_add_category_scores_and_user.py  0002_chatsession_interested_topics.py  0003_add_title_to_chatsession.py  0003_chatsession_interest_profile_userprofile_and_more.py  0003_chatsession_user.py  0004_add_user_to_profile.py
relevantai/chatbot/templates/chatbot/: chat.html
relevantai/relevantai/: asgi.py  settings.py  urls.py  wsgi.py
scraper_engine/: __init__.py  core.py
